--- a/public/login.html
+++ b/public/login.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>로그인</title>
-</head>
-<body>
-    <h1>로그인</h1>
-    <form method="POST" action="/login">
-        <input type="text" name="id" placeholder="ID">
-        <input type="password" name="pass" placeholder="PASS">
-        <input type="submit" value="로그인">
-    </form>
-</body>
+<html>
+    <head>
+        <title>로그인</title>
+    </head>
+    <body>
+        <h1>로그인</h1>
+        <form method="POST" action="/login">
+            <input type="text" name="id" placeholder="ID">
+            <input type="password" name="pass" placeholder="PASS">
+            <input type="submit" value="로그인">
+        </form>
+    </body>
 </html>
